--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
+.app {
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 0 16px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header {
+  display: flex;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.brandSelector,
+.fuelSelector {
+  padding: 0px 8px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.brandSelector {
+  padding-left: 0px;
+  width: 100%;
+}
+
+.fuelSelector {
+  padding-right: 0px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  white-space: nowrap;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.loadingMessage,
+.emptyMessage,
+.errorMessage {
+  margin: 32px;
+  text-align: center;
 }
